--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     build: .
     ports:
       - 80:80
-      - 8080:8080
+      - 8080:8080 # jupyter
+      - 6006:6006 # tensorboard
     volumes:
       - .:/home/admin/workspace
     tty: true
